Add Vector API IR test case